--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;0,700;0,900;1,200;1,400;1,500&display=swap"
         rel="stylesheet">
-    <title>Vite + Vue + TS + TW | %VITE_APP_TITLE%</title>
+    <title>TailwindCSS Color Palette Generator | %VITE_APP_TITLE%</title>
 </head>
 
 <body>
